fixed viewheight on mobile

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 
 .github {
 	scale: 70%;
-	margin: 2rem 0;
+	margin: 1rem 0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -209,6 +209,11 @@ button:hover {
 	* {
 		--button-font-size: 6rem;
 	}
+
+	#tictactoe {
+		height: 100svh;
+	}
+
 	#content {
 		width: 100vw;
 		margin-top: 0%;
